[project]
name = "agent-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "openfga-sdk>=0.10.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
